--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "fe_web_app": "file:",
+    "firebase": "^11.3.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "15.1.4",
